fix(css): improve alignment and layout of info section for better readability

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -82,7 +82,7 @@ main {
 panel*/
 .info {
   max-width: 1100px;
-  margin: -2.5rem auto 1.5rem;
+  margin: 2.5rem auto 1.5rem;
   background-color: white;
     border-radius: 0.9rem;
     box-shadow: 0 18px 35px rgba(0, 0, 0, 0.18);
